--- a/index.html
+++ b/index.html
@@ -5,32 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BHROAMAN</title>
-    <link rel ="stylesheet" href ="style/style.css">
+    <link rel ="stylesheet" href ="/Website-Design/style/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class ="header">
 <div class="header_container">
-    <img class ="header_image" img src ="images/image 1.png">
+    <div class="head_txt">
+    <h1>BHROAMAN</h1>
+    <h2>Safe Travel Anywhere</h2>
+</div>
+<div class="search_box">
+<form action="search">Search your travel destination<button>Search</button></form>
+</div>
+</div>
+<div class="nav">
+<div class="nav_logo">
+    <h1>Bhromaon</h1>
+</div>
+<div class="nav_links">
+<nav class="nav_bar">
+    <ul>
+        <li class="og_list">Who We Are</li><li class="responsive_list">Who</li>
+        <li class="og_list">What We Do</li><li class="responsive_list">What</li>
+        <li class="og_list">Travel With Us</li><li class="responsive_list">Travel</li>
+        <li class="og_list">Contact Us</li><li class="responsive_list">Contact</li>
+    </ul>
+</nav>
+</div>
 </div>
     </section>
     <section class="why_choose_us">
 <div class="main_container">
-    <img class="main_thumbs" img src="/images/Image_thumbnail.png">
-    <img class="main_thumbs" img src="/images/Image_thumbnail2.png">
-    <button class="explore">EXPLORE PLACES</button>
+    <div class="main_txt">
+    <h1>Why Choose Us</h1>
+    <p>Tion and dislike men who are so beguiled and demoralized<br> by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee<br><br> Ddislike men who are so beguiled and demoralized by the<br> charms of pleasure of the moment, so blinded by desire, that.</p>
+    <button class="explore">EXPLORE PLACES</button></div>
+    <div class="main_thumbs">
+        <div class="thumb1">
+    <img src="/Website-Design/images/Image_thumbnail.png"></div>
+    <div class="thumb1"><img src="/Website-Design/images/Image_thumbnail2.png"></div></div>  
 </div>
     </section>
     <section class ="how_it_works">
-        <div class="icons">
-            <img src="/images/icons/Search_icon.png">
-            <img src="/images/icons/Select_icon.png">
-            <img src="/images/icons/Book_icon.png">
+        <div class ="shape">
+            <img class="icon_shape" img src="/Website-Design/images/icons/Shape 1.png">
         </div>
-        <!-- <div class ="shape">
-            <img class="icon_shape" img src="/images/icons/Shape 1.png">
-        </div> -->
+        <div class="icon_container">
+            <div class="icons"><img src="/Website-Design/images/icons/Search_icon.png"><h1>Search Places<h1></div> 
+            <div class="icons"><img src="/Website-Design/images/icons/Select_icon.png"><h1>Select Places<h1></div> 
+            <div class="icons"><img src="/Website-Design/images/icons/Book_icon.png"><h1>Book & Enjoy<h1></div> 
+        </div>
     </section>
     <section class="middle_content">
         <div class="middle_container">
