Responsive update with all sections

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BHROAMAN</title>
-    <link rel ="stylesheet" href ="/Website-Design/style/style.css">
+    <link rel ="stylesheet" href ="/style/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300&display=swap" rel="stylesheet">
 </head>
@@ -17,7 +17,10 @@
     <h2>Safe Travel Anywhere</h2>
 </div>
 <div class="search_box">
-<form action="search">Search your travel destination<button>Search</button></form>
+<form class="search">
+    <input type="text" placeholder="Search your travel destination">
+    <button class="search_btn">Search</button>
+</form>
 </div>
 </div>
 <div class="nav">
@@ -44,18 +47,18 @@
     <button class="explore">EXPLORE PLACES</button></div>
     <div class="main_thumbs">
         <div class="thumb1">
-    <img src="/Website-Design/images/Image_thumbnail.png"></div>
-    <div class="thumb1"><img src="/Website-Design/images/Image_thumbnail2.png"></div></div>  
+    <img src="/images/Image_thumbnail.png"></div>
+    <div class="thumb1"><img src="/images/Image_thumbnail2.png"></div></div>  
 </div>
     </section>
     <section class ="how_it_works">
         <div class ="shape">
-            <img class="icon_shape" img src="/Website-Design/images/icons/Shape 1.png">
+            <img class="icon_shape" img src="/images/icons/Shape 1.png">
         </div>
         <div class="icon_container">
-            <div class="icons"><img src="/Website-Design/images/icons/Search_icon.png"><h1>Search Places<h1></div> 
-            <div class="icons"><img src="/Website-Design/images/icons/Select_icon.png"><h1>Select Places<h1></div> 
-            <div class="icons"><img src="/Website-Design/images/icons/Book_icon.png"><h1>Book & Enjoy<h1></div> 
+            <div class="icons"><img src="/images/icons/Search_icon.png"><h1>Search Places<h1></div> 
+            <div class="icons"><img src="/images/icons/Select_icon.png"><h1>Select Places<h1></div> 
+            <div class="icons"><img src="images/icons/Book_icon.png"><h1>Book & Enjoy<h1></div> 
         </div>
     </section>
     <section class="middle_content">
@@ -66,6 +69,37 @@
                 <p>But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account  born and I<br> account will give you a complete account of the system</p>
                 <button class="book">BOOK NOW</button>
             </div>
+        </div>
+    </section>
+    <section class="mountain">
+        <div class="mountain_container">
+            <div class="middle_container">
+            <div class="middle_txt">
+                <h2>Spain</h2>
+                <h1>GRAND SPAIN MADRID</h1>
+                <p>But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account  born and I<br> account will give you a complete account of the system</p>
+                <button class="book">BOOK NOW</button>
+            </div>
+            </div>
+        </div>
+    </section>
+    <section class="footer">
+        <h1>What Our  Tourist Say</h1>
+        <div class="footer_container">
+            
+            <div class="footer_thumbnail">
+            </div>
+            <div class="footer_txt">
+                <h1>Sam Sumon</h1>
+                <p> But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain  But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising pain was account  born and I account will give you a complete account of the system was account  born and I account will give you a nai the complete account of the system
+                </p>
+            </div>
+        </div>
+    </section>
+    <section class="bottom_banner">
+        <div class="bottom">
+            <h1>BHROAMAN</h1>
+            <p>Safe Travel Anywhere</p>
         </div>
     </section>
 </body>
